[project]
name = "schema-filters"
version = "0.1.0"
description = ""
authors = [
    {name = "Doctor", email = "thirvondukr@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.10.0",
    "flake8>=5.0.4",
    "isort>=5.10.1",
    "pytest>=7.2.0",
    "pydantic>=1.10.2",
    "mypy>=0.982",
    "coverage>=6.5.0",
    "sqlalchemy>=2.0.0b2",
]

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]
exclude = "(alembic)"

follow_imports = "silent"
ignore_missing_imports = true

check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

strict_optional = true
strict_equality = true

[tool.isort]
profile = "black"


[tool.coverage.run]
source = ["schema_filters"]
command_line = "-m pytest -v"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
precision = 2
